ocaml/fullsub/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Term
   4          | UCID TyBinder
   5          | LCID Binder

   6  Binder : COLON Type
   7         | EQ Term

   8  Type : ArrowType

   9  AType : LPAREN Type RPAREN
  10        | UCID
  11        | TTOP
  12        | BOOL
  13        | LCURLY FieldTypes RCURLY
  14        | USTRING
  15        | UUNIT
  16        | UFLOAT
  17        | NAT

  18  TyBinder :
  19           | EQ Type

  20  ArrowType : AType ARROW ArrowType
  21            | AType

  22  Term : AppTerm
  23       | LAMBDA LCID COLON Type DOT Term
  24       | LAMBDA USCORE COLON Type DOT Term
  25       | IF Term THEN Term ELSE Term
  26       | LET LCID EQ Term IN Term
  27       | LET USCORE EQ Term IN Term
  28       | LETREC LCID COLON Type EQ Term IN Term

  29  AppTerm : PathTerm
  30          | AppTerm PathTerm
  31          | FIX PathTerm
  32          | TIMESFLOAT PathTerm PathTerm
  33          | SUCC PathTerm
  34          | PRED PathTerm
  35          | ISZERO PathTerm

  36  PathTerm : PathTerm DOT LCID
  37           | PathTerm DOT INTV
  38           | AscribeTerm

  39  FieldTypes :
  40             | NEFieldTypes

  41  NEFieldTypes : FieldType
  42               | FieldType COMMA NEFieldTypes

  43  FieldType : LCID COLON Type
  44            | Type

  45  AscribeTerm : ATerm AS Type
  46              | ATerm

  47  TermSeq : Term
  48          | Term SEMI TermSeq

  49  ATerm : LPAREN TermSeq RPAREN
  50        | INERT LSQUARE Type RSQUARE
  51        | LCID
  52        | TRUE
  53        | FALSE
  54        | LCURLY Fields RCURLY
  55        | STRINGV
  56        | UNIT
  57        | FLOATV
  58        | INTV

  59  Fields :
  60         | NEFields

  61  NEFields : Field
  62           | Field COMMA NEFields

  63  Field : LCID EQ Term
  64        | Term

  65  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (65)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	UNIT  shift 11
	TIMESFLOAT  shift 12
	SUCC  shift 13
	PRED  shift 14
	ISZERO  shift 15
	UCID  shift 16
	LCID  shift 17
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	EOF  shift 21
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	toplevel  goto 24
	Command  goto 25
	Term  goto 26
	AppTerm  goto 27
	PathTerm  goto 28
	AscribeTerm  goto 29
	ATerm  goto 30


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	ATerm : INERT . LSQUARE Type RSQUARE  (50)

	LSQUARE  shift 31
	.  error


state 4
	Term : LAMBDA . LCID COLON Type DOT Term  (23)
	Term : LAMBDA . USCORE COLON Type DOT Term  (24)

	LCID  shift 32
	USCORE  shift 33
	.  error


state 5
	Term : IF . Term THEN Term ELSE Term  (25)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	UNIT  shift 11
	TIMESFLOAT  shift 12
	SUCC  shift 13
	PRED  shift 14
	ISZERO  shift 15
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	Term  goto 35
	AppTerm  goto 27
	PathTerm  goto 28
	AscribeTerm  goto 29
	ATerm  goto 30


state 6
	ATerm : TRUE .  (52)

	.  reduce 52


state 7
	ATerm : FALSE .  (53)

	.  reduce 53


state 8
	Term : LET . LCID EQ Term IN Term  (26)
	Term : LET . USCORE EQ Term IN Term  (27)

	LCID  shift 36
	USCORE  shift 37
	.  error


state 9
	AppTerm : FIX . PathTerm  (31)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 11
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	PathTerm  goto 38
	AscribeTerm  goto 29
	ATerm  goto 30


state 10
	Term : LETREC . LCID COLON Type EQ Term IN Term  (28)

	LCID  shift 39
	.  error


state 11
	ATerm : UNIT .  (56)

	.  reduce 56


state 12
	AppTerm : TIMESFLOAT . PathTerm PathTerm  (32)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 11
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	PathTerm  goto 40
	AscribeTerm  goto 29
	ATerm  goto 30


state 13
	AppTerm : SUCC . PathTerm  (33)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 11
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	PathTerm  goto 41
	AscribeTerm  goto 29
	ATerm  goto 30


state 14
	AppTerm : PRED . PathTerm  (34)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 11
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	PathTerm  goto 42
	AscribeTerm  goto 29
	ATerm  goto 30


state 15
	AppTerm : ISZERO . PathTerm  (35)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 11
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	PathTerm  goto 43
	AscribeTerm  goto 29
	ATerm  goto 30


state 16
	Command : UCID . TyBinder  (4)
	TyBinder : .  (18)

	EQ  shift 44
	SEMI  reduce 18

	TyBinder  goto 45


state 17
	Command : LCID . Binder  (5)
	ATerm : LCID .  (51)

	COLON  shift 46
	EQ  shift 47
	INERT  reduce 51
	TRUE  reduce 51
	FALSE  reduce 51
	UNIT  reduce 51
	AS  reduce 51
	LCID  reduce 51
	INTV  reduce 51
	FLOATV  reduce 51
	STRINGV  reduce 51
	DOT  reduce 51
	LCURLY  reduce 51
	LPAREN  reduce 51
	SEMI  reduce 51

	Binder  goto 48


state 18
	ATerm : INTV .  (58)

	.  reduce 58


state 19
	ATerm : FLOATV .  (57)

	.  reduce 57


state 20
	ATerm : STRINGV .  (55)

	.  reduce 55


state 21
	toplevel : EOF .  (1)

	.  reduce 1


state 22
	ATerm : LCURLY . Fields RCURLY  (54)
	Fields : .  (59)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	UNIT  shift 11
	TIMESFLOAT  shift 12
	SUCC  shift 13
	PRED  shift 14
	ISZERO  shift 15
	LCID  shift 49
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	RCURLY  reduce 59

	Term  goto 50
	AppTerm  goto 27
	PathTerm  goto 28
	AscribeTerm  goto 29
	ATerm  goto 30
	Fields  goto 51
	NEFields  goto 52
	Field  goto 53


state 23
	ATerm : LPAREN . TermSeq RPAREN  (49)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	UNIT  shift 11
	TIMESFLOAT  shift 12
	SUCC  shift 13
	PRED  shift 14
	ISZERO  shift 15
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	Term  goto 54
	AppTerm  goto 27
	PathTerm  goto 28
	AscribeTerm  goto 29
	ATerm  goto 30
	TermSeq  goto 55


state 24
	%entry% : '\001' toplevel .  (65)

	.  reduce 65


state 25
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 56
	.  error


state 26
	Command : Term .  (3)

	.  reduce 3


state 27
	Term : AppTerm .  (22)
	AppTerm : AppTerm . PathTerm  (30)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 11
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	THEN  reduce 22
	ELSE  reduce 22
	IN  reduce 22
	COMMA  reduce 22
	RCURLY  reduce 22
	RPAREN  reduce 22
	SEMI  reduce 22

	PathTerm  goto 57
	AscribeTerm  goto 29
	ATerm  goto 30


state 28
	AppTerm : PathTerm .  (29)
	PathTerm : PathTerm . DOT LCID  (36)
	PathTerm : PathTerm . DOT INTV  (37)

	DOT  shift 58
	INERT  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	TRUE  reduce 29
	FALSE  reduce 29
	IN  reduce 29
	UNIT  reduce 29
	LCID  reduce 29
	INTV  reduce 29
	FLOATV  reduce 29
	STRINGV  reduce 29
	COMMA  reduce 29
	LCURLY  reduce 29
	LPAREN  reduce 29
	RCURLY  reduce 29
	RPAREN  reduce 29
	SEMI  reduce 29


state 29
	PathTerm : AscribeTerm .  (38)

	.  reduce 38


state 30
	AscribeTerm : ATerm . AS Type  (45)
	AscribeTerm : ATerm .  (46)

	AS  shift 59
	INERT  reduce 46
	THEN  reduce 46
	ELSE  reduce 46
	TRUE  reduce 46
	FALSE  reduce 46
	IN  reduce 46
	UNIT  reduce 46
	LCID  reduce 46
	INTV  reduce 46
	FLOATV  reduce 46
	STRINGV  reduce 46
	COMMA  reduce 46
	DOT  reduce 46
	LCURLY  reduce 46
	LPAREN  reduce 46
	RCURLY  reduce 46
	RPAREN  reduce 46
	SEMI  reduce 46


state 31
	ATerm : INERT LSQUARE . Type RSQUARE  (50)

	TTOP  shift 60
	BOOL  shift 61
	USTRING  shift 62
	UUNIT  shift 63
	UFLOAT  shift 64
	NAT  shift 65
	UCID  shift 66
	LCURLY  shift 67
	LPAREN  shift 68
	.  error

	Type  goto 69
	ArrowType  goto 70
	AType  goto 71


state 32
	Term : LAMBDA LCID . COLON Type DOT Term  (23)

	COLON  shift 72
	.  error


state 33
	Term : LAMBDA USCORE . COLON Type DOT Term  (24)

	COLON  shift 73
	.  error


state 34
	ATerm : LCID .  (51)

	.  reduce 51


state 35
	Term : IF Term . THEN Term ELSE Term  (25)

	THEN  shift 74
	.  error


state 36
	Term : LET LCID . EQ Term IN Term  (26)

	EQ  shift 75
	.  error


state 37
	Term : LET USCORE . EQ Term IN Term  (27)

	EQ  shift 76
	.  error


state 38
	AppTerm : FIX PathTerm .  (31)
	PathTerm : PathTerm . DOT LCID  (36)
	PathTerm : PathTerm . DOT INTV  (37)

	DOT  shift 58
	INERT  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	TRUE  reduce 31
	FALSE  reduce 31
	IN  reduce 31
	UNIT  reduce 31
	LCID  reduce 31
	INTV  reduce 31
	FLOATV  reduce 31
	STRINGV  reduce 31
	COMMA  reduce 31
	LCURLY  reduce 31
	LPAREN  reduce 31
	RCURLY  reduce 31
	RPAREN  reduce 31
	SEMI  reduce 31


state 39
	Term : LETREC LCID . COLON Type EQ Term IN Term  (28)

	COLON  shift 77
	.  error


state 40
	AppTerm : TIMESFLOAT PathTerm . PathTerm  (32)
	PathTerm : PathTerm . DOT LCID  (36)
	PathTerm : PathTerm . DOT INTV  (37)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 11
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	DOT  shift 58
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	PathTerm  goto 78
	AscribeTerm  goto 29
	ATerm  goto 30


state 41
	AppTerm : SUCC PathTerm .  (33)
	PathTerm : PathTerm . DOT LCID  (36)
	PathTerm : PathTerm . DOT INTV  (37)

	DOT  shift 58
	INERT  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	TRUE  reduce 33
	FALSE  reduce 33
	IN  reduce 33
	UNIT  reduce 33
	LCID  reduce 33
	INTV  reduce 33
	FLOATV  reduce 33
	STRINGV  reduce 33
	COMMA  reduce 33
	LCURLY  reduce 33
	LPAREN  reduce 33
	RCURLY  reduce 33
	RPAREN  reduce 33
	SEMI  reduce 33


state 42
	AppTerm : PRED PathTerm .  (34)
	PathTerm : PathTerm . DOT LCID  (36)
	PathTerm : PathTerm . DOT INTV  (37)

	DOT  shift 58
	INERT  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	TRUE  reduce 34
	FALSE  reduce 34
	IN  reduce 34
	UNIT  reduce 34
	LCID  reduce 34
	INTV  reduce 34
	FLOATV  reduce 34
	STRINGV  reduce 34
	COMMA  reduce 34
	LCURLY  reduce 34
	LPAREN  reduce 34
	RCURLY  reduce 34
	RPAREN  reduce 34
	SEMI  reduce 34


state 43
	AppTerm : ISZERO PathTerm .  (35)
	PathTerm : PathTerm . DOT LCID  (36)
	PathTerm : PathTerm . DOT INTV  (37)

	DOT  shift 58
	INERT  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	TRUE  reduce 35
	FALSE  reduce 35
	IN  reduce 35
	UNIT  reduce 35
	LCID  reduce 35
	INTV  reduce 35
	FLOATV  reduce 35
	STRINGV  reduce 35
	COMMA  reduce 35
	LCURLY  reduce 35
	LPAREN  reduce 35
	RCURLY  reduce 35
	RPAREN  reduce 35
	SEMI  reduce 35


state 44
	TyBinder : EQ . Type  (19)

	TTOP  shift 60
	BOOL  shift 61
	USTRING  shift 62
	UUNIT  shift 63
	UFLOAT  shift 64
	NAT  shift 65
	UCID  shift 66
	LCURLY  shift 67
	LPAREN  shift 68
	.  error

	Type  goto 79
	ArrowType  goto 70
	AType  goto 71


state 45
	Command : UCID TyBinder .  (4)

	.  reduce 4


state 46
	Binder : COLON . Type  (6)

	TTOP  shift 60
	BOOL  shift 61
	USTRING  shift 62
	UUNIT  shift 63
	UFLOAT  shift 64
	NAT  shift 65
	UCID  shift 66
	LCURLY  shift 67
	LPAREN  shift 68
	.  error

	Type  goto 80
	ArrowType  goto 70
	AType  goto 71


state 47
	Binder : EQ . Term  (7)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	UNIT  shift 11
	TIMESFLOAT  shift 12
	SUCC  shift 13
	PRED  shift 14
	ISZERO  shift 15
	LCID  shift 34
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	Term  goto 81
	AppTerm  goto 27
	PathTerm  goto 28
	AscribeTerm  goto 29
	ATerm  goto 30


state 48
	Command : LCID Binder .  (5)

	.  reduce 5


state 49
	ATerm : LCID .  (51)
	Field : LCID . EQ Term  (63)

	EQ  shift 82
	INERT  reduce 51
	TRUE  reduce 51
	FALSE  reduce 51
	UNIT  reduce 51
	AS  reduce 51
	LCID  reduce 51
	INTV  reduce 51
	FLOATV  reduce 51
	STRINGV  reduce 51
	COMMA  reduce 51
	DOT  reduce 51
	LCURLY  reduce 51
	LPAREN  reduce 51
	RCURLY  reduce 51


state 50
	Field : Term .  (64)

	.  reduce 64


state 51
	ATerm : LCURLY Fields . RCURLY  (54)

	RCURLY  shift 83
	.  error


state 52
	Fields : NEFields .  (60)

	.  reduce 60


state 53
	NEFields : Field .  (61)
	NEFields : Field . COMMA NEFields  (62)

	COMMA  shift 84
	RCURLY  reduce 61


state 54
	TermSeq : Term .  (47)
	TermSeq : Term . SEMI TermSeq  (48)

	SEMI  shift 85
	RPAREN  reduce 47


state 55
	ATerm : LPAREN TermSeq . RPAREN  (49)

	RPAREN  shift 86
	.  error


state 56
	toplevel : Command SEMI . toplevel  (2)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	UNIT  shift 11
	TIMESFLOAT  shift 12
	SUCC  shift 13
	PRED  shift 14
	ISZERO  shift 15
	UCID  shift 16
	LCID  shift 17
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	EOF  shift 21
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	toplevel  goto 87
	Command  goto 25
	Term  goto 26
	AppTerm  goto 27
	PathTerm  goto 28
	AscribeTerm  goto 29
	ATerm  goto 30


state 57
	AppTerm : AppTerm PathTerm .  (30)
	PathTerm : PathTerm . DOT LCID  (36)
	PathTerm : PathTerm . DOT INTV  (37)

	DOT  shift 58
	INERT  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	TRUE  reduce 30
	FALSE  reduce 30
	IN  reduce 30
	UNIT  reduce 30
	LCID  reduce 30
	INTV  reduce 30
	FLOATV  reduce 30
	STRINGV  reduce 30
	COMMA  reduce 30
	LCURLY  reduce 30
	LPAREN  reduce 30
	RCURLY  reduce 30
	RPAREN  reduce 30
	SEMI  reduce 30


state 58
	PathTerm : PathTerm DOT . LCID  (36)
	PathTerm : PathTerm DOT . INTV  (37)

	LCID  shift 88
	INTV  shift 89
	.  error


state 59
	AscribeTerm : ATerm AS . Type  (45)

	TTOP  shift 60
	BOOL  shift 61
	USTRING  shift 62
	UUNIT  shift 63
	UFLOAT  shift 64
	NAT  shift 65
	UCID  shift 66
	LCURLY  shift 67
	LPAREN  shift 68
	.  error

	Type  goto 90
	ArrowType  goto 70
	AType  goto 71


state 60
	AType : TTOP .  (11)

	.  reduce 11


state 61
	AType : BOOL .  (12)

	.  reduce 12


state 62
	AType : USTRING .  (14)

	.  reduce 14


state 63
	AType : UUNIT .  (15)

	.  reduce 15


state 64
	AType : UFLOAT .  (16)

	.  reduce 16


state 65
	AType : NAT .  (17)

	.  reduce 17


state 66
	AType : UCID .  (10)

	.  reduce 10


state 67
	AType : LCURLY . FieldTypes RCURLY  (13)
	FieldTypes : .  (39)

	TTOP  shift 60
	BOOL  shift 61
	USTRING  shift 62
	UUNIT  shift 63
	UFLOAT  shift 64
	NAT  shift 65
	UCID  shift 66
	LCID  shift 91
	LCURLY  shift 67
	LPAREN  shift 68
	RCURLY  reduce 39

	Type  goto 92
	ArrowType  goto 70
	AType  goto 71
	FieldTypes  goto 93
	NEFieldTypes  goto 94
	FieldType  goto 95


state 68
	AType : LPAREN . Type RPAREN  (9)

	TTOP  shift 60
	BOOL  shift 61
	USTRING  shift 62
	UUNIT  shift 63
	UFLOAT  shift 64
	NAT  shift 65
	UCID  shift 66
	LCURLY  shift 67
	LPAREN  shift 68
	.  error

	Type  goto 96
	ArrowType  goto 70
	AType  goto 71

